# cross-platform-tcp-libraries

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TCPWindows.sln
Demos/: ClientCSMain.cs  ClientMain.cpp  ClientROSMain.cpp  ServerCSMain.cs  ServerMain.cpp  ServerROSMain.cpp  TCPWiimoteMain.cpp
Linux/: CMakeLists.txt
Mac/Client/Client.xcodeproj/: project.pbxproj
Mac/Client/Client.xcodeproj/xcuserdata/zachary.xcuserdatad/xcschemes/: Client.xcscheme  xcschememanagement.plist
Mac/ClientPublisher/ClientPublisher.xcodeproj/: project.pbxproj
Mac/ClientPublisher/ClientPublisher.xcodeproj/xcuserdata/zachary.xcuserdatad/xcschemes/: ClientPublisher.xcscheme  xcschememanagement.plist
Mac/ClientSubscriber/ClientSubscriber.xcodeproj/: project.pbxproj
Mac/ClientSubscriber/ClientSubscriber.xcodeproj/xcuserdata/zachary.xcuserdatad/xcschemes/: ClientSubscriber.xcscheme  xcschememanagement.plist
Mac/Server/Server.xcodeproj/: project.pbxproj
Mac/Server/Server.xcodeproj/xcuserdata/zachary.xcuserdatad/xcschemes/: Server.xcscheme  xcschememanagement.plist
Mac/TCPMac.xcworkspace/xcshareddata/: TCPMac.xccheckout
Mac/TCPMac.xcworkspace/xcuserdata/zachary.xcuserdatad/: UserInterfaceState.xcuserstate
MacObjC/ClientObjC/ClientObjC/: ClientObjCMain.mm
MacObjC/ClientObjC/ClientObjC.xcodeproj/: project.pbxproj
MacObjC/ClientObjC/ClientObjC.xcodeproj/xcuserdata/zachary.xcuserdatad/xcschemes/: ClientObjC.xcscheme  xcschememanagement.plist
MacObjC/ServerObjC/ServerObjC/: ServerObjCMain.mm
MacObjC/ServerObjC/ServerObjC.xcodeproj/: project.pbxproj
MacObjC/ServerObjC/ServerObjC.xcodeproj/xcuserdata/zachary.xcuserdatad/xcschemes/: ServerObjC.xcscheme  xcschememanagement.plist
MacObjC/TCPMacObjC.xcworkspace/: contents.xcworkspacedata
MacObjC/TCPMacObjC.xcworkspace/xcshareddata/: TCPMacObjC.xccheckout
MacObjC/TCPMacObjC.xcworkspace/xcuserdata/zachary.xcuserdatad/: UserInterfaceState.xcuserstate
TCPLibrary/: CMakeLists.txt
TCPLibrary/Inc/: Client.h  Proxy.h  Server.h  StringUtil.h  TCPBuild.h  TCPLibrary.h  TCPLibraryCS.h  TCPSocket.h  TCPSocketSet.h  TCPSocketUtil.h
TCPMac.xcworkspace/: contents.xcworkspacedata
TCPMac.xcworkspace/xcuserdata/zachary.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
TCPROS/: CMakeLists.txt  Client.launch  Server.launch  TCPClient.launch  TCPPTT.launch  TCPROS.launch  TCPServer.launch  mainpage.dox  manifest.xml
TCPROS/Src/: ClientPublisherMain.cpp  ClientSubscriberMain.cpp  ClientSubscriberToROSPublisher.cpp  ServerMain.cpp
TCPROS/src/: ClientROSMain.cpp  ServerROSMain.cpp  TCPWiimoteMain.cpp
Windows/: TCPLibrary.lib  TCPWindows.sln  libTCPLibrary-Windows.lib
Windows/Client/: Client.filters  Client.vcxproj
Windows/ClientPublisher/: ClientPublisher.vcxproj
Windows/ClientSubscriber/: ClientSubscriber.vcxproj  ClientSubscriber.vcxproj.filters
Windows/Server/: Server.vcxproj  Server.vcxproj.filters
WindowsCS/: TCPLibraryCS.dll.metagen  TCPWindowsCS.sln
WindowsCS/ClientCS/: ClientCS.csproj  ClientCSMain.cs
WindowsCS/ClientCS/Properties/: AssemblyInfo.cs
WindowsCS/ServerCS/: ServerCS.csproj  ServerCSMain.cs
WindowsCS/ServerCS/Properties/: AssemblyInfo.cs
iOS/ClientiOS/ClientiOS/: AppDelegate.h  AppDelegate.m  ClientiOS-Info.plist  MyScene.h  MyScene.mm  ViewController.h  ViewController.m  main.m
iOS/ClientiOS/ClientiOS.xcodeproj/: project.pbxproj
iOS/ClientiOS/ClientiOS.xcodeproj/xcuserdata/zachary.xcuserdatad/xcschemes/: ClientiOS.xcscheme  xcschememanagement.plist
iOS/ClientiOS/ClientiOSTests/: ClientiOSTests.m
iOS/TCPiOS.xcworkspace/: contents.xcworkspacedata
iOS/TCPiOS.xcworkspace/xcshareddata/: TCPiOS.xccheckout
iOS/TCPiOS.xcworkspace/xcuserdata/zachary.xcuserdatad/: UserInterfaceState.xcuserstate
iOSObjC/ClientIOSObjC/ClientIOSObjC/: AppDelegate.h  AppDelegate.m  ClientIOSObjC-Info.plist  MyScene.h  MyScene.mm  ViewController.h  ViewController.m  main.m
iOSObjC/ClientIOSObjC/ClientIOSObjC.xcodeproj/: project.pbxproj
iOSObjC/ClientIOSObjC/ClientIOSObjC.xcodeproj/xcuserdata/zachary.xcuserdatad/xcschemes/: ClientIOSObjC.xcscheme  xcschememanagement.plist
iOSObjC/ClientIOSObjC/ClientIOSObjCTests/: ClientIOSObjCTests-Info.plist  ClientIOSObjCTests.m
iOSObjC/TCPiOSObjC.xcworkspace/: contents.xcworkspacedata
iOSObjC/TCPiOSObjC.xcworkspace/xcuserdata/zachary.xcuserdatad/: UserInterfaceState.xcuserstate
